<resources>
    <string name="app_name">Lakpi</string>
    <string name="app_version">1.0</string>
    <string name="app_year">2020</string>
    <string name="app_copyright">lakpi.com</string>
    <string name="app_email">info@lakpi.com</string>
    <string name="app_site">http://lakpi.com</string>
    <string name="facebook_app_id" translatable="false">45363456345634563456</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb45363456345634563456</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-2097477034776565~4542510933</string>
    <string name="rewarded_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="api_key_youtube" translatable="false">AIzaSyBvhSf4Wdowfrsbz3eXprWuy_SPRW1kq_g</string>
    <string name="action_login">Log in</string>
    <string name="action_signup">Sign up</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_block">Block</string>
    <string name="action_about">About</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_copy">Copy</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_open">Open</string>
    <string name="action_edit">Edit</string>
    <string name="action_reply">Reply</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report">Report</string>
    <string name="action_remove">Delete</string>
    <string name="action_remove_chat">Delete chat</string>
    <string name="action_deactivate">Deactivate</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_more">Load more</string>
    <string name="action_search">Search</string>
    <string name="action_retry">Retry</string>
    <string name="action_turn_on">Turn on</string>
    <string name="action_turn_off">Turn off</string>
    <string name="action_select_birth">Date of Birth</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Choose from gallery</string>
    <string name="action_copy_url">Copy link</string>
    <string name="action_open_url">Open in a browser</string>
    <string name="settings_allow_messages">Receive messages from anyone</string>
    <string name="settings_allow_messages_summary">You will be able to receive Direct Messages from any user even if you do not follow them.</string>
    <string name="action_enable">Enable</string>
    <string name="action_accept">Accept</string>
    <string name="action_reject">Reject</string>
    <string name="action_pending">Pending&#8230;</string>
    <string name="action_add_to_friends">Add to friends</string>
    <string name="action_remove_from_friends">Remove from friends</string>
    <string name="action_buy_credits">Get More Credits</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_new">New</string>
    <string name="action_profile_edit_photo">Edit photo</string>
    <string name="action_profile_edit_cover">Edit cover</string>
    <string name="action_profile_edit">Edit</string>
    <string name="action_login_with_facebook">Log in with Facebook</string>
    <string name="action_signup_with_facebook">Sign up with Facebook</string>
    <string name="action_connect_with_facebook">Connect with Facebook</string>
    <string name="action_remove_connection">Remove connection</string>
    <string name="action_regular_signup">Back to the regular registration form</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="label_profile_report_0">Spam</string>
    <string name="label_profile_report_1">Hate speech or violence</string>
    <string name="label_profile_report_2">Nudity or Pornography</string>
    <string name="label_profile_report_3">Fake profile</string>
    <string name="label_profile_report_4">Piracy</string>
    <string name="label_gender_select_title">Choose gender</string>
    <string name="label_age">Age</string>
    <string name="label_sex">Gender</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_sex_undefined">Gender Not Set</string>
    <string name="label_sex_male">Gender Male</string>
    <string name="label_sex_female">Gender Female</string>
    <string name="label_profile_information">Profile Information</string>
    <string name="label_profile_activity">Profile Activity</string>
    <string name="label_profile_join">Join Date</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_login">Username</string>
    <string name="placeholder_fullname">Fullname</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_facebook_page">Facebook page</string>
    <string name="placeholder_instagram_page">Instagram page</string>
    <string name="placeholder_bio">Bio</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_subject">Subject</string>
    <string name="placeholder_support_detail">What are you contacting us about?</string>
    <string name="placeholder_current_password">Current password</string>
    <string name="placeholder_new_password">New password</string>
    <string name="placeholder_item_category">Category</string>
    <string name="placeholder_item_title">Title</string>
    <string name="placeholder_item_login">Username, email or phone</string>
    <string name="placeholder_item_passw">Password</string>
    <string name="placeholder_item_url">Web site</string>
    <string name="placeholder_item_description">Description</string>
    <string name="placeholder_photo">Add a comment for your post&#8230;</string>
    <string name="placeholder_gift">Add a comment for gift&#8230;</string>
    <string name="placeholder_search">Search</string>
    <string name="placeholder_comment">Type a comment&#8230;</string>
    <string name="placeholder_message">Type a message&#8230;</string>
    <string name="msg_loading">Please wait&#8230;</string>
    <string name="msg_loading_2">Loading. Please wait&#8230;</string>
    <string name="msg_network_error">Please check your Internet connection</string>
    <string name="msg_account_blocked">This account is blocked by a moderator.</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard.</string>
    <string name="msg_enter_item">Please write something or attach photo.</string>
    <string name="msg_enter_msg">Please write something or attach photo.</string>
    <string name="msg_send_msg_error">You can not send a message to the user.</string>
    <string name="msg_gift_sent">Gift has been successfully sent.</string>
    <string name="msg_item_saved">Item has been saved successfully.</string>
    <string name="msg_item_added">Item has been added successfully.</string>
    <string name="msg_password_changed">Password successfully changed</string>
    <string name="msg_settings_saved">Settings successfully saved.</string>
    <string name="msg_ticket_send_success">Your request is accepted! You will receive a response to the email, which is indicated in the request.</string>
    <string name="msg_password_reset_link_sent">A message with link to reset your password has been sent to your email.</string>
    <string name="msg_no_such_user_in_bd">No such user in database</string>
    <string name="msg_connect_to_facebook_success">You have successfully linked application with your account on Facebook!</string>
    <string name="msg_connect_to_facebook_error">Your account on Facebook is already associated with another account.</string>
    <string name="msg_connect_to_facebook_removed">Connect with your Facebook account removed.</string>
    <string name="msg_comment_has_been_added">Comment has been added.</string>
    <string name="msg_chat_has_been_removed">Chat has been removed.</string>
    <string name="msg_profile_removed_from_blacklist">The user is removed from blocked list.</string>
    <string name="msg_profile_link_copied">Profile link copied to clipboard.</string>
    <string name="msg_item_link_copied">Item link copied to clipboard.</string>
    <string name="msg_profile_added_to_blacklist">The user is added to blocked list.</string>
    <string name="msg_success_purchase">Purchase made! Congratulations!</string>
    <string name="msg_success_ghost_mode">"Ghost Mode" has been successfully activated!</string>
    <string name="msg_success_verified_badge">"Verified Badge" successfully activated!</string>
    <string name="msg_success_disable_ads">Ads turned off!</string>
    <string name="label_ghost_mode_enabled">Ghost Mode Enabled!</string>
    <string name="label_verified_badge_enabled">Verified Badge Enabled!</string>
    <string name="label_disable_ads_enabled">Ads turned off!</string>
    <string name="label_credits2">You Credit</string>
    <string name="label_credits_desc">Credits are a virtual currency that you can use to enable upgrades and other functions.</string>
    <string name="action_buy_iap1_google_pay">Buy 30 Credits ($1) using Google</string>
    <string name="action_buy_iap2_google_pay">Buy 70 Credits ($2) using Google </string>
    <string name="action_buy_iap3_google_pay">Buy 120 Credits ($3) using Google</string>
    <string name="action_buy_iap4_google_pay">Buy 120 Credits ($3) using Google</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_stream">Media Stream</string>
    <string name="nav_feed">Media Feed</string>
    <string name="action_view_rewarded_video_ad">Get rewards for viewing ads</string>
    <string name="credit_with_tries">Buy Credits with EFT</string>
    <string name="otp_phone_number_placeholder">Enter mobile phone number...</string>
    <string name="otp_action_send_code">Send code</string>
    <string name="otp_action_resend_code">Re-send code</string>
    <string name="otp_phone_number_info">Mobile phone number in international format, for example: +380974556781</string>
    <string name="policy_video">Who can call me</string>
    <string name="anyone">Anyone</string>
    <string name="only_friends">Only Friends</string>
    <string name="action_button_youtube">Okay</string>
    <string name="action_link_youtube">Enter youtube url</string>
    <string name="action_name_youtube">Youtube Url</string>
    <string name="btn_request_exchange_coins">Request exchange</string>
    <string name="text_exchange_coins">No coins to exchange</string>
    <string name="your_iban_number">Your IBAN number</string>
    <string name="tv_note">NOTE: Please see the Description Part in the Applied It is enough to write your username or e-mail address</string>
    <string name="tv_credit_one">500 credit 75 TL</string>
    <string name="tv_credit_two">1000 credit 125 TL</string>
    <string name="tv_credit_three">2500 Credits 225 TL</string>
    <string name="tv_bank">Bank Name: Finansbank</string>
    <string name="tv_iban">iban: TR18 0011 1000 0000 0094762976</string>
    <string name="tv_name">Name Surname: Hasan Sincar</string>
    <string name="please_confirm_your_number">Please confirm your number</string>
    <string name="iban_correct">Plese enter your correct IBAN number here</string>
    <string name="iban_fullname">Please enter full name associated with IBAN</string>
</resources>