<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_name_youtube"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/youtubeURL"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/editbg"
        android:gravity="center"
        android:hint="@string/action_link_youtube"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textSize="18dp"
        app:backgroundTint="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnOkay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/action_button_youtube"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorPrimaryDark" />
</LinearLayout>