<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/main_rl_ac"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/linear_header"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_credit_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tv_credit_one"
                android:textColor="@color/colorPrimary2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_credit_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tv_credit_two"
                android:textColor="@color/colorPrimary2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_credit_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tv_credit_three"
                android:textColor="@color/colorPrimary2"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/detailsCard"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/linear_header"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_bank"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/tv_bank"
        android:textColor="@color/gray"
        android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_iban"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/tv_bank"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/tv_iban"
            android:textColor="@color/gray"
            android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/tv_iban"
        android:layout_marginTop="2dp"
        android:paddingLeft="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:text="@string/tv_name"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_Note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/tv_note"
        android:textSize="18sp" />
    </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/detailsCard"
        android:background="@drawable/button_blue"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:text="OK"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>

