<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.lak.pi.LoginFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:background="#fff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp" >

            <TextView
                android:id="@+id/infoBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/otp_phone_number_info"
                android:textColor="@color/gray_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:digits="0123456789+"
                android:ems="10"
                android:hint="@string/otp_phone_number_placeholder"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="24" />

            <Button
                android:id="@+id/actionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_primary"
                android:text="@string/otp_action_send_code"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resendCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/otp_action_resend_code"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>